src/ui/styles.css
/* ... */
.is-mobile .sr-deck-container .sr-header-stats-count,
.is-mobile .sr-deck-container .sr-tree-stats-count {
    border-radius: var(--tag-radius);
    height: 21px;
}

@media only screen and (orientation: landscape) {
    .is-phone .sr-deck-container .sr-header .sr-button {
        padding: 0;
    }
}

/* MARK: Card Container */

.sr-card-container {
    & .sr-controls {
        display: flex;
        width: 100%;
        align-items: center;
        justify-content: center;
        gap: var(--size-4-4);
    }

    & .sr-reset-button.mod-warning {
        --interactive-warning-hover: #fdf6f6;
        color: var(--text-error);
        background-color: var(--interactive-normal);

        &:hover {
            background-color: var(--interactive-warning-hover);
        }
    }

    & .sr-main-wrapper {
        gap: var(--container-gap);
        display: flex;
        flex-direction: column;
        width: 100%;
        height: 100%;
    }

    & .sr-deck-progress-info {
        display: flex;
        flex-wrap: wrap;
        gap: var(--size-4-1) var(--size-4-4);
    }

    & .sr-horizontal-back-button,
    & .sr-horizontal-flex-spacer,
    & .sr-horizontal-close-button {
        display: none;
        padding: 0;
    }

    & .sr-horizontal-back-button {
        margin-left: var(--size-4-4);
    }

    & .sr-chosen-deck-info,
    & .sr-current-deck-info {
        display: flex;
        gap: var(--size-4-3);
        justify-content: center;
        align-items: center;
        flex-wrap: nowrap;

        color: var(--text-muted);
        text-wrap: nowrap;
        font-weight: bold;

        & .sr-chosen-deck-name,
        & .sr-current-deck-name {
            max-width: 20ch;
            overflow: hidden;
            text-overflow: ellipsis;
        }

        & .sr-chosen-deck-counter-wrapper,
        & .sr-current-deck-counter-wrapper {
            display: flex;
            justify-content: center;
            align-items: center;
            gap: var(--size-4-3);

            & .sr-chosen-deck-counter-divider,
            & .sr-current-deck-counter-divider {
                display: flex;
                border: 1px solid var(--text-faint);
                padding: 1ch 0;
            }

            & .sr-chosen-deck-card-counter-wrapper,
            & .sr-current-deck-card-counter-wrapper,
            & .sr-chosen-deck-subdeck-counter-wrapper {
                display: flex;
                justify-content: center;
                align-items: center;
                gap: 0.5ch;

                & .sr-chosen-deck-card-counter-icon,
                & .sr-chosen-deck-subdeck-counter-icon,
                & .sr-current-deck-card-counter-icon {
                    display: flex;
                    justify-content: center;
                    align-items: center;

                    & svg {
                        --icon-size: 16px;
                        --icon-stroke: 2.5px;
                    }
                }
            }
        }
    }

    & .sr-context {
        font-style: italic;
        color: var(--text-faint);
        display: block;
        word-break: break-word;
    }

    & .sr-scroll-wrapper {
        height: 100px;
        /* Arbitrary height to force the content to scroll */
        overflow: hidden;
        flex-grow: 1;
        display: flex;

        & .sr-content {
            font-size: var(--font-text-size);
            overflow-x: hidden;
            overflow-y: auto;
            user-select: text;
            flex-grow: 1;
            word-break: break-word;
        }
    }

    & .sr-content p {
        margin-top: 0;
    }

    & .sr-content > ul,
    & .sr-content > ol {
        padding-left: var(--size-4-6);
    }

    & .sr-content hr {
        backdrop-filter: invert(40%);
        border-top-style: dashed;
        margin: 1rem 0;
    }

    & .sr-content .cloze-input {
        height: 1.4rem;
    }
}

.is-phone .sr-card-container .sr-controls {
    gap: var(--size-4-3);
}

@media only screen and (orientation: landscape) {
    .is-phone .sr-card-container {
        flex-direction: row;

        .sr-controls {
            width: unset !important;
            flex-direction: column;
            justify-content: center;
            gap: var(--size-4-2);

            & > *:first-child,
            & > *:last-child {
                display: none;
            }

            & .sr-button {
                padding: 0;
            }
        }

        & .sr-horizontal-flex-spacer,
        & .sr-horizontal-close-button,
        & .sr-horizontal-back-button {
            display: inline-flex;
        }

        & .sr-chosen-deck-info > *,
        & .sr-current-deck-info > * {
            font-size: medium;
        }

        & .sr-content hr {
            margin: 2px 0;
        }
    }
}

@media only screen and (orientation: portrait) and (max-width: 650px) {
    .is-phone .sr-chosen-deck-name,
    .is-phone .sr-current-deck-name {
        max-width: 15ch;
    }
}

@media only screen and (orientation: portrait) and (max-width: 550px) {
    .is-phone .sr-chosen-deck-name,
    .is-phone .sr-current-deck-name {
        max-width: 10ch;
    }
}

@media only screen and (orientation: landscape) and (max-height: 490px) {
    .is-phone .sr-card-container .sr-content {
        & hr {
            margin: var(--size-4-1) 0;
        }

        & p {
            margin-block-start: 0.25rem;
            margin-block-end: 0.25rem;
        }
    }
}

@media only screen and (orientation: portrait) and (max-width: 440px) {
    .is-phone .sr-chosen-deck-name,
    .is-phone .sr-current-deck-name {
        max-width: 8ch;
    }
}

@media only screen and (orientation: portrait) and (max-width: 410px) {
    .is-phone .sr-chosen-deck-name,
    .is-phone .sr-current-deck-name {
        max-width: 6ch;
    }
}
/* ... */

